istio/reddit-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
    name: reddit-gateway
    namespace: istio-reddit
spec:
    selector:
        istio: ingressgateway
    servers:
      - port:
          number: 80
          name: http
          protocol: HTTP
        hosts:
          - "*"
