istio/ui-vitrualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: reddit
spec:
    hosts:
    - "*"
    gateways:
    - reddit-gateway # имя Gateway
    http:
      - route:
        - destination:
            host: ui
            port:
              number: 9292
